<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_trash"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_addDebt"
        android:icon="@drawable/ic_plus"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_adddebt"/>
    <item
        android:id="@+id/action_reLinkContact"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/action_reLinkContact"/>
    <item
        android:id="@+id/action_unLinkContact"
        android:orderInCategory="21"
        android:showAsAction="never"
        android:title="@string/action_unLinkContact"/>

</menu>